fix mobile public page visibility

--- a/app/mobile-sheets.css
+++ b/app/mobile-sheets.css
@@ -71,8 +71,8 @@
     box-shadow: none !important;
   }
 
-  div.fixed.inset-0,
-  div.fixed.inset-x-0 {
+  .sg-app-shell div.fixed.inset-0,
+  .sg-app-shell div.fixed.inset-x-0 {
     z-index: 999999 !important;
     width: 100vw !important;
     max-width: 100vw !important;
